# bash-builtins.rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish-docs.yaml
bash_builtins_macro/: Cargo.toml
bash_builtins_macro/src/: lib.rs  metadata_proc_macro.rs  options_derive_macro.rs
bash_builtins_macro/src/doc/: metadata_proc_macro.md  options_derive_macro.md
examples/: README.md  canpanic.rs  counter.rs  filesize.rs  loadfail.rs  nonrequiredargs.rs  unload.rs  upcase.rs  usevars.rs  varcounter.rs
src/: args.rs  convert.rs  errors.rs  ffi.rs  lib.rs  log.rs  variables.rs
src/variables/: arrays.rs  assoc.rs  dynvars.rs  mod.rs
tests/: examples.rs  options_derive_macro.rs
tests/examples/: arrays.output  arrays.sh  canpanic.output  canpanic.sh  counter.output  counter.sh  dynvars.output  dynvars.sh  loadfail.output  loadfail.sh  nonrequiredargs.output  nonrequiredargs.sh  unload.output  unload.sh  upcase.output  upcase.sh  variables.output  variables.sh
tests/ui/: duplicated-options.rs  duplicated-options.stderr  expected-char.rs  expected-char.stderr  expected-name-value.rs  expected-name-value.stderr  lifetime-scope.rs  lifetime-scope.stderr  missing-opt.rs  missing-opt.stderr  multiple-args.rs  multiple-args.stderr  named-fields.rs  named-fields.stderr  non-ascii.rs  non-ascii.stderr
