[package]
name = "bash-builtins"
version = "0.1.0"
edition = "2018"
authors = [ "ayosec@gmail.com" ]
description = "This crate provides utilities to implement loadable builtins for bash."
documentation = "https://docs.rs/bash-builtins"
readme = "README.md"
repository = "https://github.com/ayosec/bash-builtins.rs"
license = "Apache-2.0"
keywords = ["bash"]

[dependencies]
bash_builtins_macro = { version = "0", path = "bash_builtins_macro" }

[dev-dependencies]
assert_matches = "1"
serde_json = "1"
trybuild = "1.0.43"

[workspace]
members = [ "bash_builtins_macro", ]


# Examples

[[example]]
name = "counter"
crate-type = [ "cdylib" ]

[[example]]
name = "canpanic"
crate-type = [ "cdylib" ]

[[example]]
name = "filesize"
crate-type = [ "cdylib" ]

[[example]]
name = "loadfail"
crate-type = [ "cdylib" ]

[[example]]
name = "nonrequiredargs"
crate-type = [ "cdylib" ]

[[example]]
name = "upcase"
crate-type = [ "cdylib" ]
