[package]
name = "bash_builtins_macro"
version = "0.1.0"
edition = "2018"
authors = [ "ayosec@gmail.com" ]
description = "Macros for the bash-builtins crate"
documentation = "https://docs.rs/bash-builtins"
readme = "../README.md"
repository = "https://github.com/ayosec/bash-builtins.rs"
license = "Apache-2.0"
keywords = ["bash"]

[dependencies]
syn = { version = "1", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[lib]
proc-macro = true
